<resources>
    <string name="app_name">lab4</string>
    <string name="select_audio_file">Select audio file</string>
    <string name="download_from_internet">Download from Internet</string>
    <string name="enter_url">Enter URL:</string>
    <string name="example_audio">https://example.com/audio.mp3</string>
    <string name="select_video_file">Select video file</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="_00_00">00:00</string>
    <string name="audio_title">Audio Title</string>
</resources>